<?xml version="1.0"?>
<package format="3">
  <name>pcd2ogm</name>
  <version>0.1.0</version>
  <description>The pcd2ogm package</description>
  <maintainer email="shigeki.kobayashi619@gmail.com">Shigeki Kobayashi</maintainer>
  <license>Apache 2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
